--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <div class="jumbotron">
 	
-	<h3>{{ titulo }}</h3>  <!--  Exibindo o título pelo angular, usando a interpolação das chaves  -->
+	<h3>{{ titulo + 'Marcelo'}}</h3>  <!--  Exibindo o título pelo angular, usando a interpolação das chaves  -->
 
 	<input class="form-control" type="text" ng-model="criterioDeBusca" placeholder="O que você está buscando?">
 
