--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 	<title>Lista telefonica</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap/css/bootstrap.min.css">
-	<script src="js/angular/angular.min.js"></script>
-	<script src="js/angular/ngMask.min.js"></script>
-	<script src="js/angular/angular-locale_pt-br.js"></script>
+	<script src="util/angular/angular.min.js"></script>
+	<script src="util/angular/ngMask.min.js"></script>
+	<script src="util/angular/angular-locale_pt-br.js"></script>
 	<script src="js/app.js"></script>
+	<script src="js/controllers/listaTelefonica.js"></script>
+	<script src="js/services/contatosAPI.js"></script>
 	<meta charset="utf-8">
 </head>
 <body ng-controller="listaTelefonicaController">  <!-- Definindo o meu controle -->
@@ -16,7 +18,7 @@
 
 <div class="jumbotron">
 	
-	<h3>{{ titulo + 'Marcelo'}}</h3>  <!--  Exibindo o título pelo angular, usando a interpolação das chaves  -->
+	<h3>{{ titulo + ' Marcelo'}}</h3>  <!--  Exibindo o título pelo angular, usando a interpolação das chaves  -->
 
 	<input class="form-control" type="text" ng-model="criterioDeBusca" placeholder="O que você está buscando?">
 
@@ -77,7 +79,7 @@
 
 </div>
 
-<div ng-include="'pages/footer.html'"></div>
+<div ng-include="'view/footer.html'"></div>
 
 </section>
 </body>
