--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 	<script src="js/app.js"></script>
 	<script src="js/controllers/listaTelefonica.js"></script>
 	<script src="js/services/contatosAPI.js"></script>
+	<script src="js/services/serialGenerator.js"></script>
+	<script src="js/config/serialGeneratorConfig.js"></script>
+	<script src="js/value/configValue.js"></script>
 	<meta charset="utf-8">
 </head>
 <body ng-controller="listaTelefonicaController">  <!-- Definindo o meu controle -->
