--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<script src="js/services/serialGenerator.js"></script>
 	<script src="js/config/serialGeneratorConfig.js"></script>
 	<script src="js/value/configValue.js"></script>
+	<script src="js/directives/uiAlertDirective.js"></script>
 	<meta charset="utf-8">
 </head>
 <body ng-controller="listaTelefonicaController">  <!-- Definindo o meu controle -->
@@ -20,6 +21,10 @@
 <section id="teste-angular">
 
 <div class="jumbotron">
+
+	<ui-alert title="Um problema Ocorreu!">
+		Não foi possível carregar os dados!!
+	</ui-alert>
 	
 	<h3>{{ titulo + ' Marcelo'}}</h3>  <!--  Exibindo o título pelo angular, usando a interpolação das chaves  -->
 
